--- a/seo.html
+++ b/seo.html
@@ -496,9 +496,17 @@
                 font-size: 0.8rem;
             }
 
+            .logo-text {
+                white-space: nowrap;
+                font-size: 1.3rem;
+            }
+
             .glitch-text {
-                font-size: 2.2rem;
-                line-height: 1.2;
+                font-size: 2.8rem;
+                line-height: 1;
+                white-space: normal;
+                margin-bottom: 20px;
+                display: block;
             }
 
             .subtitle {
@@ -523,52 +531,89 @@
 
             .dashboard-section {
                 flex-direction: column;
+                height: calc(100% - 60px);
+                overflow: auto;
             }
 
             .sidebar {
                 width: 100%;
                 height: auto;
-                max-height: 150px;
+                min-height: 60px;
+                max-height: 120px;
                 border-right: none;
-                border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-                display: flex;
+                border-bottom: 1px solid rgba(255, 0, 255, 0.2);
+                display: block;
                 overflow-x: auto;
-                padding: 10px;
+                overflow-y: hidden;
+                padding: 5px;
+                position: sticky;
+                top: 0;
+                z-index: 50;
+                background: var(--bg-secondary);
+                flex-shrink: 0;
             }
 
             .sidebar-menu {
                 display: flex;
-                gap: 10px;
+                flex-direction: row;
+                gap: 5px;
+                width: max-content;
             }
 
             .menu-item {
                 white-space: nowrap;
-                padding: 8px 15px;
+                padding: 10px 15px;
                 margin-bottom: 0;
                 border-left: none;
                 border-bottom: 2px solid transparent;
+                font-size: 0.8rem;
+                display: flex;
+                align-items: center;
+                gap: 5px;
             }
 
             .menu-item:hover,
             .menu-item.active {
                 border-left-color: transparent;
                 border-bottom-color: var(--accent-main);
+                background: rgba(255, 0, 255, 0.1);
             }
 
             .dashboard-main {
-                padding: 20px;
+                padding: 15px;
+                width: 100%;
+                overflow: visible;
+            }
+
+            .dashboard-header {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 20px;
+                margin-bottom: 30px;
+            }
+
+            #target-url-display {
+                font-size: 1.1rem;
+                word-break: break-all;
+                max-width: 100%;
+                line-height: 1.3;
+            }
+
+            .overall-score {
+                font-size: 1rem;
+            }
+
+            .score-value {
+                font-size: 1.8rem;
             }
 
             .factors-grid {
                 grid-template-columns: 1fr;
+                gap: 15px;
             }
 
-            .dashboard-header h2 {
-                font-size: 1.2rem;
-            }
-
-            .score-value {
-                font-size: 1.5rem;
+            .factor-card {
+                padding: 15px;
             }
         }
     </style>
